fix the subscribe section-add media queries to handle button cut off

--- a/style.css
+++ b/style.css
@@ -346,9 +346,12 @@ button,
 
 form {
     margin: 15px 0;
-    font-size: 2rem;
+    font-size: 0;
 }
 
+input {
+    font-size: 2rem;
+}
 input[type=email] {
     width: 60%;
     padding: 10px;
@@ -357,8 +360,8 @@ input[type=email] {
 }
 
 input[type=button]{
-    padding: 10px;
-    width: 25%;
+    padding: 9px;
+    width: 30%;
     border-radius: 0;
     border-style: none;
     margin: 0;
@@ -404,7 +407,9 @@ input[type=button]:focus{
     margin: 0;
 }
 
-section p {
+section p,
+.contact p {
+    font-size: 1.8rem;
     line-height: 20px;
     padding: 10px 0 15px;    
 }
@@ -416,7 +421,14 @@ section p {
 .alissa-image {
     padding: 40px 0 0;
 }
+input[type=button] {
+    width: 45%;
 }
+input[type=email] {
+    width: 50%;
+}
+}
+
 
 
 @media (max-width:670px) {
